--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ytmusic-api": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
