--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
-    "web-vitals": "^2.1.4",
-    "ytmusic-api": "^5.2.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.2.0"
   }
 }
